--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="css/styles.css" rel="stylesheet" charset="utf-8">
   </head>
   <body class="cheltenham cheltenhamBook">
-    <h1>My Favorite Things</h1>
+    <h1>TEST My Favorite Things</h1>
     <h2 class="cheltenhamBookItalic">Below represents some of my favorite things...</h2>
     <h3>People</h3>
     <ul>
